--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/ATS/nbproject/private/
+/ATS/ATS-war/nbproject/private/
+/ATS/ATS-ejb/nbproject/private/
