--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 /ATS/nbproject/private/
 /ATS/ATS-war/nbproject/private/
 /ATS/ATS-ejb/nbproject/private/
+/ATS2020_IDEA/ats.models/nbproject/private/
