transefered project to NetBeans

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ hs_err_pid*
 /ATS/build/
 /ATS/dist/
 /com.ats.atssystem/nbproject/private/
+/ATS2020_IDEA/testsa/nbproject/private/
+/ATS2020_NETBEANS/com.atssystem.dataaccess/nbproject/private/
+/ATS2020_NETBEANS/com.ats.atssystem/nbproject/private/
+/ATS2020_NETBEANS/com.ats.dataaccess/nbproject/private/
+/ATS2020_NETBEANS/com.ats.dataaccess/build/
+/ATS2020_NETBEANS/com.ats.atssystem/build/
+/ATS2020_NETBEANS/com.ats.dataaccess/dist/
+/ATS2020_NETBEANS/com.ats.atssystem/dist/
+/ATS2020_NETBEANS/ATS/dist/
