--- a/ATS2020_NETBEANS/com.ats.dataaccess/nbproject/project.properties
+++ b/ATS2020_NETBEANS/com.ats.dataaccess/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/com.ats.dataaccess.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mssql-jdbc-7.0.0.jre8.jar=E:\\java_jars\\external\\lib\\sqljdbc_7.0\\sqljdbc_7.0\\enu\\mssql-jdbc-7.0.0.jre8.jar
+file.reference.mysql-connector-java-8.0.12.jar=E:\\java_jars\\external\\lib\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
