fixed error with db connection

--- a/ATS2020_NETBEANS/com.ats.dataaccess/nbproject/project.properties
+++ b/ATS2020_NETBEANS/com.ats.dataaccess/nbproject/project.properties
@@ -36,9 +36,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< Updated upstream:\
-    ${file.reference.mysql-connector-java-8.0.12.jar}:\
-    ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-8.0.12.jar}
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}
 =======
