--- a/ATS2020_NETBEANS/com.ats.dataaccess/src/com/properties/db.properties
+++ b/ATS2020_NETBEANS/com.ats.dataaccess/src/com/properties/db.properties
@@ -4,4 +4,4 @@
 database.url = jdbc:mysql://localhost/atsnovember?verifyServerCertificate=false&useSSL=false
 database.username = dev
 database.password = test456
-database.driver = com.mysql.jdbc.Driver
+#database.driver = com.mysql.jdbc.Driver
