before 2nd sprint

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ hs_err_pid*
 /ATS2020_NETBEANS/com.ats.dataaccess/dist/
 /ATS2020_NETBEANS/com.ats.atssystem/dist/
 /ATS2020_NETBEANS/ATS/dist/
+/ATS2020_NETBEANS/com.nbcc.icecream/nbproject/private/
