--- a/ATS2020_NETBEANS/ATS/nbproject/private/private.properties
+++ b/ATS2020_NETBEANS/ATS/nbproject/private/private.properties
@@ -8,4 +8,4 @@ j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Roman Pelikh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\86sth\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
