--- a/ATS2020_NETBEANS/ATS/nbproject/project.properties
+++ b/ATS2020_NETBEANS/ATS/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.javatuples-1.2.jar=..\\javatuples-1.2.jar
 file.reference.mysql-connector-java-8.0.12.jar=E:\\java_jars\\external\\lib\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +46,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${reference.com_ats_atssystem.jar}:\
-    ${reference.com_ats_dataaccess.jar}
+    ${reference.com_ats_dataaccess.jar}:\
+    ${file.reference.javatuples-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
