--- a/ATS2020_NETBEANS/com.ats.atssystem/nbproject/project.properties
+++ b/ATS2020_NETBEANS/com.ats.atssystem/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/com.ats.atssystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javatuples-1.2.jar=..\\javatuples-1.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.com_ats_dataaccess.jar}
+    ${reference.com_ats_dataaccess.jar}:\
+    ${file.reference.javatuples-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
