--- a/ATS2020_NETBEANS/ATS/nbproject/private/private.properties
+++ b/ATS2020_NETBEANS/ATS/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\86sth\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1439259792.properties
+file.reference.javatuples-1.2.jar=D:\\NBCC_Fall2019\\Java\\external\\lib\\javatuples-1.2.jar
 file.reference.mysql-connector-java-8.0.12.jar=D:\\NBCC_Fall2019\\Java\\external\\lib\\mysql-connertor-java-8.0.12\\mysql-connector-java-8.0.12.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/86sth/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
