--- a/ATS2020_NETBEANS/ATS/nbproject/project.properties
+++ b/ATS2020_NETBEANS/ATS/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.javatuples-1.2.jar=..\\javatuples-1.2.jar
-file.reference.mysql-connector-java-8.0.12.jar=E:\\java_jars\\external\\lib\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar=D:\\NBCC_Fall2019\\Java\\external\\lib\\mysql-connertor-java-8.0.12\\mysql-connector-java-8.0.12.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,10 +44,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${reference.com_ats_atssystem.jar}:\
     ${reference.com_ats_dataaccess.jar}:\
-    ${file.reference.javatuples-1.2.jar}
+    ${file.reference.javatuples-1.2.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
