--- a/ATS2020_NETBEANS/ATS/nbproject/project.properties
+++ b/ATS2020_NETBEANS/ATS/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.6.jar=E:\\java_jars\\gson-2.8.6.jar
 file.reference.javatuples-1.2.jar=..\\javatuples-1.2.jar
 file.reference.mysql-connector-java-8.0.12.jar=E:\\java_jars\\external\\lib\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 includes=**
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${reference.com_ats_atssystem.jar}:\
     ${reference.com_ats_dataaccess.jar}:\
-    ${file.reference.javatuples-1.2.jar}
+    ${file.reference.javatuples-1.2.jar}:\
+    ${file.reference.gson-2.8.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
